--- a/Day 06/section 02/index.html
+++ b/Day 06/section 02/index.html
@@ -17,7 +17,26 @@
     <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
-
+<div class="section-padding">
+    <div class="container">
+        <div class="row align-items-center section-bg">
+            <div class="col-md-8">
+                <div class="section-title">
+                    <h2>See why property managers love using Latchel</h2>
+                    <div class="section-btn">
+                        <a href="#" class="demo-btn">Get a Demo</a>
+                        <a href="#" class="demo-btn-sec">Sign up for free!</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="img-absolute">
+                    <img src="img/img4.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 
